// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LazyLoad > Default > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft"
  >
    Lazy Content
  </div>
</DocumentFragment>
`;

exports[`LazyLoad Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe"
  >
    Lazy Content
  </div>
</DocumentFragment>
`;
